new test case stringer-3 + misc test case updates